@@ -41,32 +41,22 @@ AUX chromium.default 148 SHA256 bdac1d32025d53158f96c8ad5bd71a58abdcf02f3a8759a4
 AUX dot-gclient 174 SHA256 0ae6d69323d1d286de7ef1fa62c330536ada7280bda7564fefb5d071384ed324 SHA512 ea858464ee8732536633259ed3d11990822e8b8493c07b83218856a127320ba21b9cfc184f7e7a899739bc5f938fbca25224e559fb7db8558cb86fccc743a685 WHIRLPOOL 72a5a9af7955e653151090b555c6a67a261ff807871fdda16d7c3fabf4b52449ac9caae466ba51a17d2efed74a68adc32687599ea4287cc033e75f787d874b55
 DIST chromium-36.0.1985.125-testdata.tar.xz 111516748 SHA256 566530e718daee0ce0e6d28710b54ff4dcdf42cc6bab62421203790c0d31459d SHA512 659ef9503ce3570cbee30a4b74934c94109352a5055a4c14f7151d74ccfc346b8328547aa1710849a5c4b09250130237363c6e6404b3f1b20b7b5470007ad398 WHIRLPOOL 54aca91ab8d78a9cc2bfa7b4167299fe732b8316af0198a7295debd6b4089992b1d4023d7da2f48deee9567acbeeae9f3d6530758ed9b1d476af5a1395afa70f
 DIST chromium-36.0.1985.125.tar.xz 205462088 SHA256 1782d0a5397e94313dee9e456de38bdfccf575c4e565f064a6ed7f9c509d5023 SHA512 a2c0f9b9fc91526ee053f0eca1aa2c6267b316717b8cb30bd5c50cad8891c28e1bf804838b2af035df46771d29d6815610066437d32afc504fbe39d2c48f303c WHIRLPOOL 3ee0ba43b0a3f93b4b7bededbe8443f1f9673a1c0712b7db09411ac96fe05327c835475ccb7298800b40c32dcac56573c0cf035f092ae52cf353b075c81fb16b
-DIST chromium-37.0.2062.44-lite.tar.xz 214300252 SHA256 c8cb12ef7c61991a6044c2fe13950bec7e3d56301fa043869b3845406f1e3aad SHA512 4a8b1f3755674b846a812c1e7410f295619df4604164c350b0d76bfc0aac452fbcf779ba690da966c103d373689cda6db1eaa795c15f2ec9a9a993cad3c901d8 WHIRLPOOL f9b2989a615dfc2896825cda2b50e62a32e51ac2adfc551d7c0ac59576c2b472ff8a1c67cfb473289c181d714999b54a1e91aae11c277ab720b42a539c9cfe64
 DIST chromium-37.0.2062.58-lite.tar.xz 214313476 SHA256 af893a66b83dc9b236e400f178817e49feeacfd99ff48397c890a687dfe32410 SHA512 de5fbf53f3a441b3db9322cf27d60f87b6f232151fb72715a727e26c126f85bfd4e654b777e19992e467cee4b336384b63fcaf9db866031cc68447a14a455295 WHIRLPOOL ba9c2b030f835442414fd70fd10f6957fdfcc7123d6bffe3713d815c4cc23798a9f310abc21d5909b6be7ccbe8c9ebec9e24f8efc5271211006ef265bc5c91c2
+DIST chromium-37.0.2062.68-lite.tar.xz 214344600 SHA256 608aa9b15943594f80d751fa5df8a7a28578fd5d9b8542a658928ccade1b0814 SHA512 c2f9ed65947a460523530a7d98f2bd481987dd1827842aed0404f5dbfda9240c1446b3bfb2053b344dbacaa10f572b63bce57a1b4034ac68291d70024582383e WHIRLPOOL b2267bbeb652385f0dda7bc4ad2fca69785e14ebd07c655a6d013739bf8c1aff97fd06ea9df73bb470541d07bedebdc0a65f21afab0eeda3cf08799d70a3a833
 DIST chromium-38.0.2107.2-lite.tar.xz 228350836 SHA256 7f31275be73c6933f785803b89b6f627ac6ec184d28f395aac724d736debd43e SHA512 2c17853f510d8c489993d2e07ad6e007398d429183938fda5c40293785d13bcf4db376c6077542735889aef9aba5051944e146ec94970358ec9496ad690d9bee WHIRLPOOL b9f98b030a175addfa1028444ae0f682443a89836146242671c1670069f711edbf615a095caf119696195fce6525546633fc48b651d3c40f8a97a00a225bec77
 DIST chromium-38.0.2114.2-lite.tar.xz 228583844 SHA256 288067699a5043f2f0ff5a279b7926b22d5556cd33964e8d36c93048e734aa14 SHA512 2beb586e70bcc14cdbad042dc5ee1b16c685a75d331da2f068c7e2347040dc140c956913209f04ed6c384c2e080dd72c81e5968abc2f7fcd5d718e7524c23e0a WHIRLPOOL b03b7222585a3d64feed112cd9a859d95d99c5283c099f4d0ce5f254ed4fe75c1dca68313b3d646a3db30c0ddf859e2680416440541d530ca1a963a71c89721d
 EBUILD chromium-36.0.1985.125.ebuild 20024 SHA256 d059a8f1c1d4c8a8838d272a2a10bb60eea0a05056e4a073df100529d5714183 SHA512 593b0ca1ed6c1fbdc15b9b0c426f54df337e7031d75bf468b3a3997840309c53c0c59178ad02e0d69de3c9f4a2db19319fafd745141a94f3c8f99ab1feed3722 WHIRLPOOL 52166987d30626c9dbf68ed78c5ca35cbe8d423e2d2f80a5d5bada34f8f0793a6ddd0330be5d4a84235162358e33db045e3b1edfdc5b0de6373dac40bab8189f
-EBUILD chromium-37.0.2062.44.ebuild 17705 SHA256 5d83270836f9969df534f07ca3ee43035bdef7affefe0d2c3f2f6349a6ad435e SHA512 7804f06d32b1ee85db14c13d83fa64c2eebffa33e7cf8af9c76cc4e0c1fa02a6f1febb5525f327532b7e04a68fd12c86ae9efb8924dc81924dad57bbe17501ff WHIRLPOOL 19a76afc1cb2dbff9a28c01f72adfd464dccafe8b14a50b5a70859d36e3a1baf7d7b4607de527dd46b89cee85505426d4c46f66fd2535a837183a99fcca20e1d
 EBUILD chromium-37.0.2062.58.ebuild 17702 SHA256 53ae7801b55bf637c69512e1191d73486326b2cf0dfb4aff249cbb5cf033591d SHA512 e9e9985fe9fddf4ebc6f5c312fee4d7915dd52d16060faaf5199e0b156d017410290f4d1bd41e39f1a2e1be490865d3a38804389c62f8a507adf021dab063dcc WHIRLPOOL 9147dfcd2c8a97c7b9fdb2c23eae4a7369eda5189d557a8c99dc7c85a3da4dcb230e139d1b88d30252ce6eb9a6651d70f0cd8fc56f207d0974ddd2d954ea66fb
+EBUILD chromium-37.0.2062.68.ebuild 17702 SHA256 396066ae3faf329f27d4e433797164b07ed5cddc75fadce3101001d6af0a04c6 SHA512 39c59a84062ae4e8f2bcb27ab78bbe2c66f53679b1df19df92ebde9f7cf3228c0696f424b7a8784daab9d5bb2f3d02a59df74f500b9131c1ba567992b233b445 WHIRLPOOL f2d807dfa0b1ba959967d8a9d99a711bb7bafa8edc0c16263f82f1a84fcf0ca6b7269dddc91ae497e3c657c3740e6ee2597114f464ea6e7a3454b86b61bd881e
 EBUILD chromium-38.0.2107.2.ebuild 17681 SHA256 ad7cf12a0e68bd69c51ef583c93998e625ca2e36b81b940789b48ee0998463a6 SHA512 60a04be1d9a1525ee304c1ec62aa61a67583a8f19989419ae37b162db2fe8ecb974d2d81d7e2d7eebcbd941dfc5694416976605f7b4725b80a6269f679d31380 WHIRLPOOL 60440790fff41972844638a1c1bfb721f36c18342359c8eeb603f3a4abc4bfbbcaaf039c58e32672864e0836c17108f2ba9e105c235a99644c4404f540f2a943
 EBUILD chromium-38.0.2114.2.ebuild 17636 SHA256 5258fc2dbc0329e8affefef99c0e2ec83abbdfbe10d4b65a983629163c51bafc SHA512 3d257b1814d17158a5557982bb61f3b615a872676ca56ec292a1f14211dce7ea46109bedc5d67cbb0e33203ca34bd871a552015c0a7f140723d80b57017e81a9 WHIRLPOOL cfce2f7a8152f5580144dc8f5c3ba73b7518642ceab3c4cf7030d7b27abd298f19fe049da2e89f8728d008403382df1e510548ea4d01b6c2982b180de1556d40
-MISC ChangeLog 112163 SHA256 de3961af6e90f47aa591091b290fabeb74a83530946c436ded72e90563bc4f5f SHA512 83998cf0ca9c179c28d81967eb02c15a892a3f6b9700050268b9511d530ad9eae75b89b2a2fe3de95241ece86ec6b9c9ff46de9ffbf359b99894c0e78b0ac057 WHIRLPOOL f4848c137a08fb975bdc691a9e26ac243f66caf2ca37072afd42ab50ed9401567de08f9b698e8bb4659e40b42cd88e59ecc0ee3f607aaaf61cb984923b921e89
+MISC ChangeLog 112333 SHA256 b5c6327f0ae44513f82a0991e9844fda76d4858c601d5273f34209b9c8dfbb7e SHA512 b44bfc15b1af31429ee894306a9b36affc691d3950ffc911f54b08be6a33829d10e373216677357904095580f53a49d9d40f44826b8fbb5a3d2f981ce229310e WHIRLPOOL 501f9aa03730bc2b370f6983519bae52d59671792d86028456a3d42e4753adf0399785b27852ce07f144bdc0dc15d85239373257358bed03b6b36081750f0d74
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC metadata.xml 518 SHA256 821944f32fcf203b2573c164aeaa52fbc69e5f651d366cdda66901633461f5ef SHA512 01d29c4ce93a8a624fc8926e7e72e8bf124b91ae6fdbf6e7179e9d6ddd6db33d73acde62541777118da1c9d197c83d6c615c247d785e76a8ab560f915abd08d5 WHIRLPOOL f9b21a0d032d1f78b6aeb78f759b9f126b1b1cc118a5edd3a08eefcb2d7b51ff406abb95323fe05b4c04468aca68dddd3d39ce7edfb9b352abc1bc3890d7e1ab
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT4lMtAAoJEE8aJVXqcZkdY1UP/0MSM0QtSc+Fp4rhKQ1sKfGG
-LPpm5kdrMWw8MOyDDIUwT1FmriNngLwP9mlOxISJiz4kvr4XWiEub4DigJES0wlO
-C7DvKsv7ZM64jcFgKphO0D+GGmJ0i/5jqfq6V+Gf5U0WDRXvGgQsdEvLm5yVokTp
-OESgVBbinQ+F+2DDM5wlulUBx0RVqvnt+Tm9yAb8t4COdTFdtLeUoGX3JOIKxABg
-yshs2GvvhXEHEsTaM3ZEQUeLmtFjq1EaWCDUDqnAKsc0OenBJi/B5Hm8pLTqcB7o
-Y6oxgyOjoY5Zj668sEZNrlxL6Vwa4ncVF3A60YYU0GlGm9YTiHbOyXbq/cbHooB7
-szcW4KYJoiJkaBk3WgdDxshQSw3OYG+63vVSGf/BCql8jqIQWtuMazwV9NO4ryJS
-jtFm7/8VLMMzG//L69aRTrgyDFSB4rlrPHuyLjFL+H2P4tZHJRNFQUzer7OGNBjJ
-ESazvgqjxkYSCeI0oNqvE95u2CZm7E2FNafSV25rISSPw63cFgDl+90/MOQaCcfl
-0QwPoq+QlHUktvNyHX7OrAh8geIJ/tF7DxdXNDdVKoHs9nTLVpyn6ZaPCbtJ+rrA
-+vlOvQI8QC33KZJwBqEj0dWJkSlAwOruZ7TIOuSaHL/A0fH6pkFvb/LxwpyJTe6m
-SAnP0F1Ld07xcush+wZz
-=ycHF
+iF4EAREIAAYFAlPkPZsACgkQC77qH+pIQ6SmvAEAr3lGxZtIv9eC3qrl/p/J6ubF
+0gjY5e7Gka7e2b21swoA/05mygb9ACsOgj43VOGdM3/3SglZSdiJmrYv4BGA3Gow
+=6WMP
 -----END PGP SIGNATURE-----
