@@ -7,16 +7,16 @@ DIST google-chrome-stable_36.0.1985.125-1_amd64.deb 48386260 SHA256 ec5e14bf047a
 DIST google-chrome-stable_36.0.1985.125-1_i386.deb 48771710 SHA256 03bc2ff19fedff54595af943803bdb00aee6abe69f06fa98ed478469caff0aaa SHA512 a784d3ebe2eee57994731da0b88458e00720e67a0ab24f1a34bb1b2fef489959d91f358a18662ea72a7ca399cb29aee40d8c71b34cb6103c7ec3a152e09cc2d1 WHIRLPOOL 646a6e0a3e611df00acc02b5cbd33cb8241340d5b386ae24acead069ae86a8313c6cd17f5c51501e8e9f1add8dd622e31c40176caf9bfa68b7afc86d50c1c3f8
 DIST google-chrome-unstable_38.0.2114.2-1_amd64.deb 47472462 SHA256 a238d26c8c801b124f7f405ffcd233eb5ab575a7816cd79b56fd11f8c5900098 SHA512 56a5118a1b188df82251bb01654450339d449ffa35e754d5371523f3d0b82e4683013aeeea5435415a12dbdf7f046dc2f56b3e020c756bc3473b80e095083c57 WHIRLPOOL 67c35c9f1689110c55421d7025f11d2dc280693ecbd6f4370193ce2618c4f760a3347486b6bada468ee6a7847f521abea37fc79324d3611f074c5b605f0b01ae
 DIST google-chrome-unstable_38.0.2114.2-1_i386.deb 46912814 SHA256 c31f51c9fec379d7828d9fe10f351ce460b511613c28ca15bec7b2c79e3894e3 SHA512 7f96ed66734758f390e30b7cbf6d0231d02a996a29b52034613219ab2124f28ca0dbe33287ab7aa678cc2343f2f4a2b6de083193a07124d226bde39e3934ea60 WHIRLPOOL 890e2d52e15913da2790acd485e3b0ebdef3d23fb9fa81e0a0e401cf89ad7df986d771d163efbad6bc0bf3ff01598ba02edc01a0306e440eb35b747be9bea00d
-EBUILD chrome-binary-plugins-36.0.1985.125_p1.ebuild 1974 SHA256 78cd4dceb5b749b886a5acdc5cd2fa4e236e2de725c422ff773d28960f6dcac4 SHA512 585a13d092c93fcbd74bc39b15e893e3be54538d976c1ef18210a98dfa3d0b32beb582b8540e06d654a763a42609b5123d7ec604e9d4fa18568a812aad5415e8 WHIRLPOOL 775d4c442b97f4ff76dedc63865aa5919e1e69e5682a90f67ff6851daa7fcd55aa13182fbb7df6200aee9d276b32ce08739f0233432b4e23456a35066922b0c5
-EBUILD chrome-binary-plugins-37.0.2062.68_beta1.ebuild 1950 SHA256 9dc77f511654a3c69447e5e9675310af40b61516ae818ab27288255fc81ee554 SHA512 9ed2dbd4cbb9550dc953d1a2c43448921956ae625866e7b3f3eaef15f6a19b22d3f3e2e570da9d67b2a79ba0163888785ced5fb147f189165e69963e904cd017 WHIRLPOOL 4e0ea5141b1c0b0133f5378ba94cb1312fa83d7b7a07f43b3ec431b4381709e6ce8a083f77323dfb6a9d951da5f49676aa1833d9618bbd22e03f82e04836230c
-EBUILD chrome-binary-plugins-38.0.2114.2_alpha1.ebuild 1950 SHA256 b519e8440d09e518aab6f43d93d49e2ed6b737fd25784ad27ca90e73d4d7945a SHA512 01de72be41dee14845f4ee84c99b64b1d57caa6adc5e0efd938321161afe37b8b6b77b30e3ca7758798cc7e08b71a78c82ef233a04c1997147fc4271407c92e4 WHIRLPOOL 62bea0b49bfed02e5c6913e4f6112cefd36fa6a24a40cec9549ee2c518ed3d6605ffc5d04d90572903e8a3081a50180fbc2240b879e1e1eb2d2afb73cc9919dd
-EBUILD chrome-binary-plugins-9999.ebuild 1886 SHA256 b6519f2f974862d1bb5a0ec3618478dd39e03d7d3524d0c9ec913aa03330f369 SHA512 8b5dd19ec18cf1a7bd949d6f2aea22931aab2714945c91e48cd1e6d6425ffcca734a744a6a302fd9440082152c116c6f8ae7f6950424eff7d86159413a5d8406 WHIRLPOOL 6743d7c58fce7428232161bca86f360c5987f360f4db7c127a195214ea50fd1d0cf0052b3903391301d07165ddf6ccb4cc33e151b0cb37367ddeacf5bb7ab014
-MISC ChangeLog 45718 SHA256 e867ae61a4efb31b639dc5e8f82eeb6c9ba8f853db707920cf10c6bcabdf3264 SHA512 7d7ccb78e8ffaa6a0c962117e53da03af751d372be8a3247a72dfd5d55a95af643acbd774094297eb70980877e0e8ef436b51af9f4c3b7418b972f3583546ab1 WHIRLPOOL 9d5c2d8b814f62a09478cdcc58b32d6faec8d92db639239e5107b745799c0e9ea06d62fb7c98e847517329bb0d386d290e530375efac6ec6da82c40cdf401d7a
+EBUILD chrome-binary-plugins-36.0.1985.125_p1.ebuild 1942 SHA256 8338861d12fc362c5a65fcafada24f97463b193da4acc21cf72baf4bd7c4d96c SHA512 7b168d72d3de139c9a26b0d87a62bcd0a39bd33d95104e11857e8bc66a260f9697318a57aa911196bf9f2c5d34a4e3c08d6b646e5facc3304b949cd1321282f2 WHIRLPOOL 473ea776a5287bc9d9b246d47bb5c7693f09de0cd4df778907a9b1bf3c2e11d310fd89af963fbd2efd69248bf0df2310e6b839a66006bf16833b8e3681c9fc2b
+EBUILD chrome-binary-plugins-37.0.2062.68_beta1.ebuild 1918 SHA256 f5dc65827e7178f93854d6dd2bebff7f81526c39b8355d1d8bd1b372c8ef4be4 SHA512 7a33f92f2d39d1121bcd0f7d90fcb0955c1942f0b3998460d63ea9380b92fa4f0a97ff25ec78c7a5ece62e34c1043a5aced9f943ff0caa215606da71c432dca8 WHIRLPOOL f781fc017aca97036f1684ba81c6864dd43e63b04b0200abf31d18e3a436aa5f00ce00a3255cf087a16ef0b05b12f03f6fbb3fff84455da995dfeec5cce97d25
+EBUILD chrome-binary-plugins-38.0.2114.2_alpha1.ebuild 1918 SHA256 95fe1cb4e0edc1c5f75777b8af100848dc650d81961a4f5e559516cddcca20d6 SHA512 7f6479906b25dfc8414b152a758684687cc8f55dac468097c2315575caf45d5e7222cd046c9cdb69aafd760740231ba86674008bbba36fe02cce37e8be83cb7c WHIRLPOOL 014193fb43f6e12203dd12c1ae12f90501f98d22129b93ad4f718f0fb49ab5e84c833d89ca17952d1ab8e3d449b1e4f4ce5870332544c4710de58eeb621ad6ae
+EBUILD chrome-binary-plugins-9999.ebuild 1854 SHA256 91cd05b8aa8b0ef6370a0257eba4e628bb34e9fd14994cbf945b4f49bcf7db41 SHA512 46155849c7869673d452f499a9556b12e2395cfa5659d44e8eb389a9ea79ae07eabe003cb31538218e407f9dafbb0d7b1555ab6cb1532b5e950e4eaaecaacb0b WHIRLPOOL af348ef6ddc419767d94a394cbc6de23eac215140eeb4073d00ecab2c66d416d17d1cebb317a2fba9526a80bda7f73f26081f9f7dd5b7a5473ce2c6264356549
+MISC ChangeLog 45979 SHA256 0d2ca8bf97e0eef473fe015751eaad2424c8ef01ecbba94dcb07312b23c88b7a SHA512 26cc39a20fddd8abafcf769a922300fbecac814018aebbd2e68bf9604d03d1de9e20bf4b92ef9c0b86a5be5b1b0eb5d19694ea914a74210dd33007edcfd58f12 WHIRLPOOL a354230f2e8b27a49b872a1ccfcbe2c0ae9d0e47987752f035f4e56966d8c2c7ddf850cb5a23581eb8e50af1bad2750a29d1e94990e2656d1507782e171b9a73
 MISC metadata.xml 409 SHA256 d40d69b26dd8aefe8da69937e54e0a885d6867e28e42c5dcbe193233a84ee533 SHA512 bdf4f11c173af9f80b3475f8ea32ba966806d1e0e694bd55a6a4960717e3f3ffff69eabb060ae5ee4d3b39cdf18eeeff45c9d431c3b6ce8ae5c271c7a409aa71 WHIRLPOOL 7319320d648a8aae0eec726a8ab489bb71fe5f93dfb40847e97344a02be85a09ba931d5aeee8fdb13d899de3c90746c75a59897287c715dd771dfbe8863b803b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlPivrEACgkQC77qH+pIQ6TVbAEAqj4ux4dErjiiS9c0hbMQXR2Y
-K9t+R7zOXnGT3/WSH3MBAMhWyRkwLLPfpb4/jppC5i72+8ZEGqJpqp9TPEC5foqu
-=B3xx
+iF4EAREIAAYFAlPkNVsACgkQC77qH+pIQ6SjaQEAhOb1aY9Ra8yF6sEk5035FXMh
+RDi6Yl8GydN5jwz33bcA/3+9I9s0jA1Zrtopicnm3VCOZGg0okVd+zEEsnGEIyMq
+=piGW
 -----END PGP SIGNATURE-----
