@@ -1,6 +1,13 @@
 # ChangeLog for www-plugins/chrome-binary-plugins
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.163 2014/08/06 23:48:00 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.164 2014/08/08 02:26:33 floppym Exp $
+
+  08 Aug 2014; Mike Gilbert <floppym@gentoo.org>
+  chrome-binary-plugins-36.0.1985.125_p1.ebuild,
+  chrome-binary-plugins-37.0.2062.68_beta1.ebuild,
+  chrome-binary-plugins-38.0.2114.2_alpha1.ebuild,
+  chrome-binary-plugins-9999.ebuild:
+  Shorten DESCRIPTION.
 
 *chrome-binary-plugins-37.0.2062.68_beta1 (06 Aug 2014)
 *chrome-binary-plugins-38.0.2114.2_alpha1 (06 Aug 2014)
