@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/http
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/http/ChangeLog,v 1.6 2014/08/05 16:00:49 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/http/ChangeLog,v 1.7 2014/08/08 06:25:21 graaff Exp $
+
+*http-0.6.2 (08 Aug 2014)
+
+  08 Aug 2014; Hans de Graaff <graaff@gentoo.org> +http-0.6.2.ebuild:
+  Version bump.
 
   05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> http-0.5.0.ebuild:
   Remove trailing '.' from DESCRIPTION.
